Tried to get the info and gear to appear upon click, doesn't work currently and would love some help

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,6 +96,14 @@
   margin: auto;
 }
 
+.InfoList{
+  display: none;
+}
+
+.visable{
+  display: flex;
+}
+
 .hike{
   border-radius: 25px;
   border: 1px outset black;
