--- a/client/src/App.css
+++ b/client/src/App.css
@@ -103,7 +103,7 @@ body{
   position: absolute;
   cursor: pointer;
   top: 0;
-  left: 0;
+  left: 150px;
   right: 0;
   bottom: 0;
   background-color: #ccc;
