--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "BelweBold";
+  src: local("BelweBold"),
+    url("./assets/fonts/BelweBold.otf") format("opentype");
+  font-weight: normal;
+}
