--- a/client/src/App.css
+++ b/client/src/App.css
@@ -205,3 +205,9 @@ input:checked + .slider:before {
   font-size: 12px;
   background-color: #CBB700;
   color: black; }
+
+.hover {
+    background-color: white;
+    border-style: solid;
+    border-color: hsl(27, 82%, 51%);
+}
