--- a/client/src/App.css
+++ b/client/src/App.css
@@ -259,3 +259,14 @@ input:checked + .slider:before {
 .gear-rec {
   color: black;
 }
+
+.avatar-bar{
+  grid-area: filter;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.avatar-icon{
+  margin-right: 20px;
+  align-items: center;
+}
